--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -101,15 +101,13 @@
 
 - name: PostgreSQL | Initialize the database | RedHat
   command: >
-    {{ postgresql_bin_directory }}/initdb -D {{ postgresql_data_directory }}
+    sudo -u {{ postgresql_service_user }} {{ postgresql_bin_directory }}/initdb -D {{ postgresql_data_directory }}
     --locale={{ postgresql_locale }} --encoding={{ postgresql_encoding }}
     {% if postgresql_data_checksums and postgresql_version is version_compare('9.3', '>=') %}--data-checksums{% endif %}
     {% if postgresql_pwfile != "" %}--pwfile={{ postgresql_pwfile }} {% endif %}
     {% if postgresql_wal_directory != "" and postgresql_version is version_compare('10', '<') %}--xlogdir={{ postgresql_wal_directory }} {% endif %}
     {% if postgresql_wal_directory != "" and postgresql_version is version_compare('10', '>=') %}--waldir={{ postgresql_wal_directory }} {% endif %}
   become: yes
-  become_user: "{{ postgresql_service_user }}"
-  become_method: su
   when: ansible_os_family == "RedHat" and
         (postgresql_cluster_reset or
          pgdata_dir_exist.changed or
